--- a/src/index.css
+++ b/src/index.css
@@ -62,8 +62,12 @@ h1 {
 }
 
 .card img {
-  max-width: 80%;
-  max-height: 80%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   transition: transform 0.5s;
   transform: scale(0);
   animation: 2s hideImage linear;
